# CodeClauseInternship_Facial-Recognition-System

./: pyproject.toml
Src/: main.py
